--- a/app/src/main/res/layout/activity_start_page.xml
+++ b/app/src/main/res/layout/activity_start_page.xml
@@ -45,12 +45,14 @@
     </LinearLayout>
 
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="25"
         android:orientation="vertical"
         >
         <LinearLayout
+            android:id="@+id/supervierBtn"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:padding="10dp"
@@ -59,6 +61,8 @@
             android:layout_marginHorizontal="25dp"
             android:layout_marginVertical="15dp"
             android:gravity="center"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:clickable="true"
             >
             <TextView
                 android:layout_width="wrap_content"
@@ -72,6 +76,7 @@
 
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/ownerBtn"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:padding="10dp"
@@ -80,6 +85,8 @@
             android:layout_marginHorizontal="25dp"
             android:layout_marginVertical="15dp"
             android:gravity="center"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:clickable="true"
             >
             <TextView
                 android:layout_width="wrap_content"
