--- a/app/src/main/res/layout/single_card.xml
+++ b/app/src/main/res/layout/single_card.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center"
     android:orientation="horizontal">
 
     <TextView
@@ -16,6 +17,11 @@
         android:textSize="15dp"
         android:textStyle="bold" />
 
+    <Space
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_weight="1" >
+    </Space>
 
     <Button
         android:id="@+id/plusBtn"
