--- a/app/src/main/res/layout/activity_start_page.xml
+++ b/app/src/main/res/layout/activity_start_page.xml
@@ -72,7 +72,7 @@
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:layout_gravity="center"
-                android:text="SUPERVISER" />
+                android:text="OWNER" />
 
         </LinearLayout>
         <LinearLayout
@@ -96,7 +96,7 @@
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:layout_gravity="center"
-                android:text="OWNER" />
+                android:text="SUPERVISOR" />
 
         </LinearLayout>
 
