Retrieve data from backend

--- a/app/src/main/res/layout/activity_main_store_owner.xml
+++ b/app/src/main/res/layout/activity_main_store_owner.xml
@@ -45,7 +45,13 @@
 
     </LinearLayout>
 
+<!--    <ProgressBar-->
+<!--        android:id="@+id/progressBarOwner"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content" />-->
+
     <LinearLayout
+        android:id="@+id/editArea"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/round"
@@ -78,6 +84,7 @@
     </LinearLayout>
 
     <ScrollView
+        android:id="@+id/viewArea"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/round"
