--- a/app/src/main/res/layout/single_card.xml
+++ b/app/src/main/res/layout/single_card.xml
@@ -9,7 +9,7 @@
         android:id="@+id/itemNameCard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="8"
+        android:layout_weight="3"
         android:padding="10dp"
         android:text="Item -1"
         android:textAlignment="center"
@@ -17,17 +17,17 @@
         android:textSize="15dp"
         android:textStyle="bold" />
 
-    <Space
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:layout_weight="1" >
-    </Space>
 
-    <Button
-        android:id="@+id/plusBtn"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:text="+"></Button>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="3"
+        android:text="No of Items: "
+        >
+
+    </TextView>
 
     <TextView
         android:id="@+id/itemCountCard"
@@ -41,10 +41,10 @@
         android:textStyle="italic" />
 
     <Button
-        android:id="@+id/minusBtn"
-        android:layout_width="40dp"
+        android:id="@+id/updateBtnOwner"
+        android:layout_width="100dp"
         android:layout_height="40dp"
-        android:text="-"></Button>
+        android:text="Update"></Button>
 
 
 </LinearLayout>
