Added Loader bar to Owner

--- a/app/src/main/res/layout/activity_update_item_page.xml
+++ b/app/src/main/res/layout/activity_update_item_page.xml
@@ -64,6 +64,7 @@
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <Button
+               android:id="@+id/addItemPlus"
                android:layout_width="wrap_content"
                android:text="+"
                android:layout_height="wrap_content">
@@ -81,6 +82,7 @@
                android:textSize="20dp"
                android:textStyle="bold" />
            <Button
+               android:id="@+id/addItemMinus"
                android:layout_width="wrap_content"
                android:text="-"
                android:layout_height="wrap_content">
@@ -99,6 +101,7 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/updateTheItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
