--- a/app/src/main/res/layout/activity_main_store_owner.xml
+++ b/app/src/main/res/layout/activity_main_store_owner.xml
@@ -45,10 +45,16 @@
 
     </LinearLayout>
 
-<!--    <ProgressBar-->
-<!--        android:id="@+id/progressBarOwner"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content" />-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        >
+        <ProgressBar
+            android:id="@+id/progressBarOwner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/editArea"
