--- a/app/src/main/res/layout/activity_add_site.xml
+++ b/app/src/main/res/layout/activity_add_site.xml
@@ -7,6 +7,7 @@
     tools:context=".AddSite">
 
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,6 +17,7 @@
         android:background="@drawable/round"
         android:orientation="vertical"
         android:padding="5dp">
+
 
         <LinearLayout
             android:id="@+id/mm"
@@ -55,6 +57,17 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            >
+            <ProgressBar
+                android:id="@+id/progressBarAddSite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/sectionForm"
+            android:layout_width="match_parent"
             android:layout_height="170dp"
             android:layout_margin="25dp"
             android:background="@drawable/round"
@@ -76,6 +89,7 @@
                 android:textAlignment="center" />
 
             <EditText
+                android:id="@+id/editTextAddSite"
                 android:layout_width="match_parent"
                 android:background="@drawable/round"
                 android:layout_height="50dp"
@@ -91,12 +105,22 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            >
+            <ProgressBar
+                android:id="@+id/progressBarAddSite2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/updateTheItem"
+                android:id="@+id/addASiteBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
