--- a/app/src/main/res/layout/activity_superviser_home_page.xml
+++ b/app/src/main/res/layout/activity_superviser_home_page.xml
@@ -77,7 +77,7 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:id="@+id/mainStoreSuper"
+                    android:id="@+id/mainStoreSupervisor"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:padding="10dp"
@@ -113,7 +113,7 @@
 
                 </LinearLayout>
                 <LinearLayout
-                    android:id="@+id/onGoingBtnSupervisor"
+                    android:id="@+id/onGoingSitesSupervisor"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:padding="10dp"
@@ -144,6 +144,42 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:src="@drawable/progress"
+                        >
+                    </ImageView>
+
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/supervisorProjectBtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:padding="10dp"
+                    android:background="@drawable/round"
+                    android:layout_margin="25dp"
+                    android:gravity="center"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        android:textSize="25sp"
+                        android:textAllCaps="true"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:layout_gravity="center"
+                        android:text="Supervisor Pro" />
+
+                    <Space
+                        android:layout_width="0dp"
+                        android:layout_height="1dp"
+                        android:layout_weight="1" >
+                    </Space>
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/projects"
                         >
                     </ImageView>
 
