--- a/app/src/main/res/layout/activity_superviser_home_page.xml
+++ b/app/src/main/res/layout/activity_superviser_home_page.xml
@@ -39,7 +39,7 @@
             </Space>
 
             <Button
-                android:id="@+id/logOut"
+                android:id="@+id/logOutSupervisor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Log Out"
