--- a/app/src/main/res/layout/activity_sup_select_project.xml
+++ b/app/src/main/res/layout/activity_sup_select_project.xml
@@ -159,6 +159,18 @@
 
         </ScrollView>
 
+        <LinearLayout
+            android:id="@+id/btnArea"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_height="wrap_content">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Update Project items"></Button>
+        </LinearLayout>
+
 
     </LinearLayout>
 
