--- a/app/src/main/res/layout/activity_sup_select_project.xml
+++ b/app/src/main/res/layout/activity_sup_select_project.xml
@@ -146,13 +146,13 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="500dp"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <ListView
                     android:id="@+id/projectsSectionsListView"
                     android:layout_width="wrap_content"
-                    android:layout_height="240dp"
+                    android:layout_height="500dp"
                     android:layout_margin="10dp"></ListView>
             </LinearLayout>
 
@@ -166,6 +166,7 @@
             android:gravity="center"
             android:layout_height="wrap_content">
             <Button
+                android:id="@+id/updateBtnSupProjects"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Update Project items"></Button>
