--- a/app/src/main/res/layout/single_card_site_items.xml
+++ b/app/src/main/res/layout/single_card_site_items.xml
@@ -9,7 +9,7 @@
         android:id="@+id/itemNameCardSup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="7"
+        android:layout_weight="2"
         android:padding="10dp"
         android:text="Item -1"
         android:textAlignment="center"
@@ -19,9 +19,10 @@
 
 
     <LinearLayout
+        android:gravity="center_vertical"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="1">
+        android:layout_weight="5">
 
         <Button
             android:id="@+id/plusBtn"
@@ -33,11 +34,12 @@
             android:id="@+id/itemCountCardSup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="15dp"
+            android:layout_weight="7"
             android:paddingLeft="10dp"
             android:text="5"
             android:textColor="@color/black"
-            android:textSize="12dp"
+            android:textSize="15dp"
+            android:textAlignment="center"
             android:textStyle="italic" />
 
         <Button
