--- a/app/src/main/res/layout/activity_update_item_page.xml
+++ b/app/src/main/res/layout/activity_update_item_page.xml
@@ -106,7 +106,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_margin="4dp"
-            android:text="Update List" />
+            android:text="Update Item" />
     </LinearLayout>
 
 
