--- a/app/src/main/res/layout/activity_add_site.xml
+++ b/app/src/main/res/layout/activity_add_site.xml
@@ -51,7 +51,7 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/addicon"></ImageView>
+                android:src="@drawable/projects"></ImageView>
 
         </LinearLayout>
 
