--- a/app/src/main/res/layout/activity_owner_home_page.xml
+++ b/app/src/main/res/layout/activity_owner_home_page.xml
@@ -179,7 +179,7 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/addicon"
+                android:src="@drawable/projects"
                 >
             </ImageView>
 
