--- a/app/src/main/res/layout/single_card_site_items.xml
+++ b/app/src/main/res/layout/single_card_site_items.xml
@@ -7,12 +7,12 @@
 
     <TextView
         android:id="@+id/itemNameCardSup"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:padding="10dp"
         android:text="Item -1"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:textColor="@color/black"
         android:textSize="15dp"
         android:textStyle="bold" />
@@ -32,7 +32,7 @@
 
         <TextView
             android:id="@+id/itemCountCardSup"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_weight="7"
             android:paddingLeft="10dp"
